devel
-----

* Fixed issue #17394: Unnecessary document-lookup instead of Index-Only query.
  This change improves projection handling so that more projections can be
  served from indexes.

* Updated arangosync to v2.13.0-preview-2.

* BTS-1070: Fixed query explain not dealing with an aggregate function without
  arguments and the WINDOW node not being defined as an Ast node type name.

* Solve a case of excessive memory consumption in certain AQL queries with
  IN filters with very long lists. Free sub-iterators as soon as they are
  exhausted.

* Improved shard distribution during collection creation.

* Change default output format of arangoexport from `json` to `jsonl`.

* Added startup option `--query.log-failed` to optionally log all failed AQL
  queries to the server log. The option is turned off by default.

* Added startup option `--query.log-memory-usage-threshold` to optionally log
  all AQL queries that have a peak memory usage larger than the configured
  value. The default value is 4GB.

* Added startup option `--query.max-artifact-log-length` to control the
  maximum length of logged query strings and bind parameter values.
  This allows truncating overly long query strings and bind parameter values
  to a reasonable length. Previously the cutoff length was hard-coded.

* Fixed GitHub issue #17291: Fixed a server crash which could occur in case an
  AQL query using a PRUNE or FILTER statement, combined with UDFs (user defined
  functions), got executed.

* Improve cardinality estimate for AQL EnumerateCollectionNode in case a
  `SORT RAND() LIMIT 1` is used. Here, the estimated number of items is at
  most 1.

* ES-1312: fix handling of reaching the WAL archive capacity limit.

* BTS-941: The HTTP API now delivers the correct list of the collection's
  shards in case a collection from an EnterpriseGraph, SmartGraph, Disjoint
  EnterpriseGraph, Disjoint SmartGraph or SatelliteGraph is being used.
