@@ -1,5 +1,5 @@
 /*jshint globalstrict:false, strict:false */
-/*global arango, VPACK_TO_V8, V8_TO_VPACK */
+/*global arango, VPACK_TO_V8, V8_TO_VPACK, assertEqual, assertTrue, assertFalse, assertNull */
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief test request module
@@ -33,33 +33,32 @@
 var jsunity = require('jsunity');
 var expect = require('chai').expect;
 
-////////////////////////////////////////////////////////////////////////////////
-/// @brief test suite
-////////////////////////////////////////////////////////////////////////////////
-
-function RequestSuite () {
-  return { 
-    testVersionJsonJson : versionJsonJson,
+function RequestSuite() {
+  return {
+    testVersionJsonJson: versionJsonJson,
     testVersionVpackJson: versionVpackJson,
     testVersionJsonVpack: versionJsonVpack,
     testVersionVpackVpack: versionVpackVpack,
-    testEchoVpackVpack: echoVpackVpack
+    testEchoVpackVpack: echoVpackVpack,
+    testAdminExecuteWithHeaderVpack: adminExecuteWithHeaderVpack,
+    testAdminExecuteWithHeaderVpack2: adminExecuteWithHeaderVpack2,
+    testAdminExecuteNoHeaderVpack: adminExecuteNoHeaderVpack,
   };
 };
 
 
 function versionJsonJson() {
-  var path = '/_api/version';
-  var headers = {
+  const path = '/_api/version';
+  const headers = {
     'content-type': 'application/json',
-    'accept'      : 'application/json'
+    'accept': 'application/json'
   };
 
-  var res = arango.POST_RAW(path, "", headers);
+  const res = arango.POST_RAW(path, "", headers);
 
   expect(String(res.headers['content-type'])).to.have.string("application/json");
 
-  var obj = JSON.parse(res.body);
+  const obj = JSON.parse(res.body);
 
   expect(obj).to.have.property('server');
   expect(obj).to.have.property('version');
@@ -67,23 +66,23 @@ function versionJsonJson() {
 
   expect(obj.server).to.be.equal('arango');
   expect(obj.version).to.match(/[0-9]+\.[0-9]+\.([0-9]+|(milestone|alpha|beta|devel|rc)[0-9]*)/);
-  
+
   expect(obj.license).to.match(/enterprise|community/g);
 };
 
 function versionVpackJson() {
-  var path = '/_api/version';
-  var headers = {
+  const path = '/_api/version';
+  const headers = {
     'content-type': 'application/x-velocypack',
-    'accept'      : 'application/json'
+    'accept': 'application/json'
   };
 
-  var res = arango.POST_RAW(path, "", headers);
+  const res = arango.POST_RAW(path, "", headers);
 
   expect(res.body).to.be.a('string');
   expect(String(res.headers['content-type'])).to.have.string("application/json");
 
-  var obj = JSON.parse(res.body);
+  const obj = JSON.parse(res.body);
 
   expect(obj).to.have.property('server');
   expect(obj).to.have.property('version');
@@ -94,18 +93,18 @@ function versionVpackJson() {
   expect(obj.license).to.match(/enterprise|community/g);
 };
 
-function versionJsonVpack () {
-  var path = '/_api/version';
-  var headers = {
+function versionJsonVpack() {
+  const path = '/_api/version';
+  const headers = {
     'content-type': 'application/json',
-    'accept'      : 'application/x-velocypack'
+    'accept': 'application/x-velocypack'
   };
 
-  var res = arango.POST_RAW(path, "", headers);
+  const res = arango.POST_RAW(path, "", headers);
 
   expect(String(res.headers['content-type'])).to.have.string("application/x-velocypack");
 
-  var obj = VPACK_TO_V8(res.body);
+  const obj = VPACK_TO_V8(res.body);
 
   expect(obj).to.have.property('server');
   expect(obj).to.have.property('version');
@@ -116,18 +115,18 @@ function versionJsonVpack () {
   expect(obj.license).to.match(/enterprise|community/g);
 };
 
-function versionVpackVpack () {
-  var path = '/_api/version';
-  var headers = {
+function versionVpackVpack() {
+  const path = '/_api/version';
+  const headers = {
     'content-type': 'application/x-velocypack',
-    'accept'      : 'application/x-velocypack'
+    'accept': 'application/x-velocypack'
   };
 
-  var res = arango.POST_RAW(path, "", headers);
+  const res = arango.POST_RAW(path, "", headers);
 
   expect(String(res.headers['content-type'])).to.have.string("application/x-velocypack");
 
-  var obj = VPACK_TO_V8(res.body);
+  const obj = VPACK_TO_V8(res.body);
 
   expect(obj).to.have.property('server');
   expect(obj).to.have.property('version');
@@ -138,29 +137,77 @@ function versionVpackVpack () {
   expect(obj.license).to.match(/enterprise|community/g);
 };
 
-///////////////////////////////////////////////////////////////////////////////////////
-
-function echoVpackVpack () {
-  var path = '/_admin/echo';
-  var headers = {
+function echoVpackVpack() {
+  const path = '/_admin/echo';
+  const headers = {
     'content-type': 'application/x-velocypack',
-    'accept'      : 'application/x-velocypack'
+    'accept': 'application/x-velocypack'
   };
 
-  var obj = { "server" : "arango" , "version" : "3.0.devel" };
-  var body = V8_TO_VPACK(obj);
-  
-  var res = arango.POST_RAW(path, body, headers);
+  const obj = {"server": "arango", "version": "3.0.devel"};
+  const body = V8_TO_VPACK(obj);
+
+  const res = arango.POST_RAW(path, body, headers);
 
   expect(res.body).to.be.a('SlowBuffer');
   expect(String(res.headers['content-type'])).to.have.string("application/x-velocypack");
-  var replyBody = VPACK_TO_V8(res.body);
+  const replyBody = VPACK_TO_V8(res.body);
   expect(replyBody.requestBody).to.be.a('string');
 };
 
-////////////////////////////////////////////////////////////////////////////////
-/// @brief executes the test suite
-////////////////////////////////////////////////////////////////////////////////
+
+/*
+The following tests are for requests to _admin/execute in which the body is in velocypack format.
+It's only interpreted as velocypack if the header has the content type for velocypack in the request.
+Otherwise, as it happens when there's no content-type in the header, it's interpreted as JSON and will return an error
+ */
+
+function adminExecuteWithHeaderVpack() {
+  const path = '/_admin/execute';
+  const headers = {
+    'content-type': 'application/x-velocypack',
+  };
+
+  const obj = "require(\"console\").log(\"abc\");";
+  const body = V8_TO_VPACK(obj);
+
+  // correct header set, so everything should work well
+  const res = arango.POST_RAW(path, body, headers);
+  assertEqual(res.code, 200);
+  assertFalse(res.error);
+  assertNull(res.parsedBody);
+}
+
+function adminExecuteWithHeaderVpack2() {
+  const path = '/_admin/execute';
+  const headers = {
+    'content-type': 'application/x-velocypack',
+  };
+
+  const obj = "return \"abc\"";
+  const body = V8_TO_VPACK(obj);
+
+  // correct header set, so everything should work well
+  const res = arango.POST_RAW(path, body, headers);
+  assertEqual(res.code, 200);
+  assertFalse(res.error);
+  assertEqual(res.parsedBody, "abc");
+}
+
+function adminExecuteNoHeaderVpack() {
+  const path = '/_admin/execute';
+  const obj = "return \"abc\"";
+  const body = V8_TO_VPACK(obj);
+
+  // the request we are making contains binary data,
+  // but we are intentionally not setting the correct
+  // Content-Type header. the server has no chance of
+  // interpreting this properly, so we are expecting a
+  // 500 error back.
+  const res = arango.POST_RAW(path, body);
+  assertEqual(res.code, 500);
+  assertTrue(res.error);
+}
 
 jsunity.run(RequestSuite);
 
